- add delete page. - KTS-167:  Unable to create workflow. - some actions are _always_ available. - spacing prevents title from overlapping other columns - KTS-163: add a "workflow" column to the browse page - improve titling on search / saved search - KTS-143: fields need validation. - KTS-103: change all "the KnowledgeTree" to "KnowledgeTree".
git-svn-id: https://kt-dms.svn.sourceforge.net/svnroot/kt-dms/trunk@4619 c91229c3-7414-0410-bfa2-8a42b809f60b

--- a/resources/css/kt-contenttypes.css
+++ b/resources/css/kt-contenttypes.css
@@ -10,6 +10,7 @@
     padding-left: 25px;
     padding-top: 5px;
     padding-bottom: 5px;
+    margin-right: 25px;
 }
 
 .contenttype.ms-presentation { background-image: url(../../resources/mimetypes/powerp.gif); }
